--- a/project-pizzeria/package.json
+++ b/project-pizzeria/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "fer-07-project",
+    "name": "projekt-pizzeria",
     "version": "1.0.0",
     "description": "",
     "main": "index.html",
