--- a/project-pizzeria/package.json
+++ b/project-pizzeria/package.json
@@ -47,5 +47,8 @@
     "dependencies": {
         "json-server": "^0.17.0",
         "tiny-slider": "^2.9.4"
-    }
+    },
+    "engines": {
+        "node": ">=0.10.3 <15"
+      }
 }
